# doodle-jump

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
clang-format/__MACOSX/: ._.clang-format
cmake/Modules/: FindSFML.cmake
doxygen/html/: _bonus_controller_8cpp.html  _bonus_controller_8h.html  _bonus_controller_8h_source.html  _bonus_model_8cpp.html  _bonus_model_8h.html  _bonus_model_8h_source.html  _bonus_type_8h.html  _bonus_type_8h.js  _bonus_type_8h_source.html  _bonus_view_8cpp.html  _bonus_view_8h.html  _bonus_view_8h_source.html  _bounding_box_8cpp.html  _bounding_box_8h.html  _bounding_box_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _concrete_entity_factory_8cpp.html  _concrete_entity_factory_8h.html  _concrete_entity_factory_8h_source.html  _direction_8h.html  _direction_8h.js  _direction_8h_source.html  _entity_controller_8cpp.html  _entity_controller_8h.html  _entity_controller_8h_source.html  _entity_factory_8h.html  _entity_factory_8h_source.html  _entity_model_8cpp.html  _entity_model_8h.html  _entity_model_8h_source.html  _entity_view_8cpp.html  _entity_view_8h.html  _entity_view_8h_source.html  _event_8h.html  _event_8h_source.html  _event_handler_8cpp.html  _event_handler_8h.html  _event_handler_8h_source.html  (+497 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+72 more)
libraries/: json.hpp
resources/entities/: player.json
resources/files/: highscore.txt
resources/textures/: config.json  legal.json
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  Random.cpp  Random.h  ScoreManager.cpp  ScoreManager.h  Settings.h  Stopwatch.cpp  Stopwatch.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h  main.cpp
src/Controller/: PlatformController.h  PlayerController.cpp  TileController.cpp
src/Model/: BonusModel.cpp  BonusModel.h  PlatformModel.cpp  TileModel.cpp  TileModel.h
src/View/: BonusView.cpp  BonusView.h  PlatformView.h  TileView.cpp  TileView.h
src/bounding_box/: BoundingBox.cpp  BoundingBox.h
src/controllers/: Bonus.h  BonusController.cpp  BonusController.h  EntityController.cpp  EntityController.h  Platform.h  PlatformController.cpp  PlatformController.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  TextController.cpp  TextController.h  Tile.h  TileController.cpp  TileController.h
src/enums/: BonusType.h  Direction.h  EntityType.h  EventType.h  GameEventType.h  GameState.h  GameStateType.h  Keyboard.h  PlatformType.h  WindowEventType.h
src/events/: Event.h  EventHandler.cpp  EventHandler.h  EventManager.cpp  EventManager.h  HeightChangedEvent.cpp  HeightChangedEvent.h  KeyPressedEvent.cpp  KeyPressedEvent.h  PlayerBouncesOnPlatformEvent.cpp  PlayerBouncesOnPlatformEvent.h  PlayerCollisionEvent.cpp  PlayerCollisionEvent.h  PlayerDiedEvent.cpp  PlayerDiedEvent.h  PlayerUsesBonusEvent.cpp  PlayerUsesBonusEvent.h  ReachedNewHeightEvent.cpp  ReachedNewHeightEvent.h
src/exceptions/: Exception.cpp  Exception.h  FileNotFoundException.h  FontLoadException.h  MissingResourceException.cpp  MissingResourceException.h  ParseException.h  TextureLoadException.h  TextureNotFoundException.cpp  TextureNotFoundException.h  UndefinedException.h
src/factories/: AbstractFactory.h  ConcreteEntityFactory.cpp  ConcreteEntityFactory.h  ConcreteFactory.cpp  ConcreteFactory.h  EntityFactory.h
src/game/: Game.cpp  Game.h  GameErrorState.cpp  GameErrorState.h  GameMenuState.cpp  GameMenuState.h  GameOverState.cpp  GameOverState.h  GamePlayingState.cpp  GamePlayingState.h  GameRunningState.cpp  GameRunningState.h  GameState.h  GameStateControl.cpp  GameStateControl.h  GameStateController.cpp  GameStateController.h
src/game/states/: GameErrorState.cpp  GameErrorState.h  GameMenuState.cpp  GameMenuState.h  GameOverState.cpp  GameOverState.h  GamePlayingState.cpp  GamePlayingState.h  GameState.h
src/gui/: EventWrapper.h  SpriteWrapper.h  TextWrapper.h  TextureWrapper.h  WindowWrapper.h  WrapperFactory.h
src/gui/sfml/: SFEvent.cpp  SFSprite.cpp  SFSprite.h  SFText.cpp  SFText.h  SFTexture.cpp  SFTexture.h  SFWindow.cpp  SFWindow.h  SFWrapperFactory.cpp  SFWrapperFactory.h
src/logic/entities/: BoundingBox.cpp  BoundingBox.h  Doodler.cpp  Doodler.h  Entity.h
src/models/: Bonus.h  BonusModel.cpp  BonusModel.h  Entity.h  EntityModel.cpp  EntityModel.h  Platform.cpp  Platform.h  PlatformModel.cpp  PlatformModel.h  Player.h  PlayerModel.cpp  PlayerModel.h  Tile.cpp  Tile.h  TileModel.cpp  TileModel.h
src/score/: ScoreManager.cpp  ScoreManager.h
src/utils/: Random.cpp  Random.h  ResourceLoader.cpp  ResourceLoader.h  Stopwatch.cpp  Stopwatch.h  TextureLoader.cpp  TextureLoader.h
src/views/: Bonus.cpp  Bonus.h  BonusView.cpp  BonusView.h  EntityView.cpp  EntityView.h  Platform.h  PlatformView.cpp  PlatformView.h  Player.cpp  Player.h  PlayerView.cpp  PlayerView.h  TextView.cpp  TextView.h  Tile.h  TileView.cpp  TileView.h
src/world/: Camera.cpp  Camera.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
src/wrappers/: EventWrapper.h  SpriteWrapper.h  TextWrapper.h  TextureWrapper.h  WindowWrapper.h  WrapperFactory.h
src/wrappers/sfml/: SFEvent.cpp  SFEvent.h  SFSprite.cpp  SFSprite.h  SFText.cpp  SFText.h  SFTexture.cpp  SFTexture.h  SFWindow.cpp  SFWindow.h  SFWrapperFactory.cpp  SFWrapperFactory.h  SFWrapperFactoryLogic.cpp
